# py-data-analysis-proj-essentials

./: .renew_venv.sh  README.md  cookiecutter.json
prj_tools/: __init__.py
{{cookiecutter.top_level_dir_name}}/: .renew_venv.sh  LICENSE  pyproject.toml
{{cookiecutter.top_level_dir_name}}/scripts/: dev_0.ipynb
{{top_level_dir_name}}/: LICENSE  cookiecutter.json  pyproject.toml
