[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prj_tools"
authors = [{name = "{{cookiecutter.analyst}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "flit",
    "ruff",
]
all = ["prj_tools[dev]"]

[tool.ruff.lint]
select = ["E", "F"]
